added functionality on operations..........

--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -7,7 +7,7 @@
     <a mat-flat-button color="primary" style="font-size:larger;" routerLink="./home" routerLinkActive="active-button">Home</a>
     <a mat-flat-button color="primary" style="font-size:larger;" routerLink="./products" routerLinkActive="active-button">Inventory</a>
     <a mat-flat-button color="primary" style="size: medium; font-size:larger;" routerLink="./vendors" routerLinkActive="active-button">Vendor Mgmt</a>
-    <a mat-flat-button color="primary" style="font-size:larger;" routerLinkActive="active-button">Operations</a>
+    <a mat-flat-button color="primary" style="font-size:larger;"  routerLink="./order-management" routerLinkActive="active-button">Operations</a>
     <a mat-flat-button color="primary" style="font-size:larger;" routerLinkActive="active-button">Admin</a>
             <button mat-icon-button class="account-icon" (click)="Logout()">
             <mat-icon>account_circle</mat-icon>
