Implemented various order status change actions...

--- a/src/app/modules/admin/components/order-item-details/order-item-details.component.html
+++ b/src/app/modules/admin/components/order-item-details/order-item-details.component.html
@@ -41,7 +41,7 @@
             <br>#{{Orderdetails.orderId}}
           </li>
           <li><b>status</b>
-            <br>{{Orderdetails.status}}
+            <br>{{Orderdetails.statusCd}}
           </li>
           <li><b>Expected Date</b>
             <br>{{Orderdetails.orderSubmitDtTm}}
@@ -69,7 +69,7 @@
           <div class="description">
          
              
-            <p>  <b>Name:</b>&nbsp;&nbsp;&nbsp;{{item.productName}}</p>
+            <p>  <b>Name:</b><br>{{item.productName}}</p>
             <p><b>Quantity:</b>&nbsp;&nbsp;&nbsp;{{item.quantity}}</p>
             <p><b>GST:</b>&nbsp;&nbsp;&nbsp;{{item.igstAmt}}%</p>
               
