--- a/src/app/modules/admin/components/order-management/order-management.component.scss
+++ b/src/app/modules/admin/components/order-management/order-management.component.scss
@@ -42,7 +42,7 @@
   }
   #view-icon{
     color: green;
- 
+    align-items: end;
      
   }
   .mat-header-row {
@@ -52,8 +52,8 @@
   // .mat-header-cell.mat-column-orderId {
   //   width: 20px;
   // }
-  .view-icon{
-   justify-content: center;
-  }
+  // .view-icon{
+  //  justify-content: center;
+  // }
 
 
