--- a/src/app/modules/admin/components/order-management/order-management.component.html
+++ b/src/app/modules/admin/components/order-management/order-management.component.html
@@ -1,10 +1,15 @@
+
+ <!-- <ng-container *ngComponentOutlet="DynamicComponents"></ng-container> -->
+
+
+
 <div class="example-container mat-elevation-z8">
   <div class="example-header">
     <mat-form-field>
       <input matInput (keyup)="applyFilter($event)" placeholder="Search Here...">
     </mat-form-field>
   </div>
-
+  
   <mat-table #table [dataSource]="dataSource" matSort>
 
 
@@ -14,8 +19,8 @@
     </ng-container>
 
     <ng-container matColumnDef="userId">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> User Id </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.userId}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> User Email Id </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.emailId}} </mat-cell>
     </ng-container>
 
 
@@ -32,7 +37,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;
     <ng-container matColumnDef="status">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Status </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{element.statusCd}} </mat-cell>
 
     </ng-container>
 
@@ -49,42 +54,44 @@
 
     <ng-container matColumnDef="Actions">
       <mat-header-cell *matHeaderCellDef>Actions </mat-header-cell>
-      <mat-cell *matCellDef="let element" (click)="openDialog(element.orderId)">
-
+      <mat-cell *matCellDef="let element">
+        <!-- let i = index;"  -->
         <!-- <div *ngIf="element.status=='OPEN'">
           <button>NO-ACTION</button>
         </div> -->
+       
 
-        <div *ngIf="element.status=='SUBMITTED'">
-          <button class="btn btn-outline-primary">VERIFY PAYMENT</button>
+        <div *ngIf="element.statusCd=='PAID'">
+          <button class="btn btn-outline-primary" (click)="openDialog('verifypayment',element.orderId)">VERIFY PAYMENT</button>
+          <!-- (click)="dynamicComponentLoading('verifyPayment',i)" -->
         </div>
-        <div *ngIf="element.status=='PAYMENT VERIFIED'">
-          <button class="btn btn-outline-primary">START FILLING</button>
+        <div *ngIf="element.statusCd=='PAYMENT VERIFIED'">
+          <button class="btn btn-outline-primary" (click)="openDialog('start-filling',element.orderId)">START FILLING</button>
         </div>
-        <div *ngIf="element.status=='filling in progress'">
-          <button class="btn btn-outline-primary">FINSHI FILLING</button>
+        <div *ngIf="element.statusCd=='FILLING IN PROGRESS'">
+          <button class="btn btn-outline-primary" (click)="openDialog('finish-filling',element.orderId)">FINSHI FILLING</button>
         </div>
-        <div *ngIf="element.status=='FILLED'">
-          <button class="btn btn-outline-primary">CHECK QUANTITY</button>
+        <div *ngIf="element.statusCd=='FILLED'">
+          <button class="btn btn-outline-primary" (click)="openDialog('check-quality',element.orderId)">CHECK QUALITY</button>
         </div>
-        <div *ngIf="element.status=='QC IN PROGRESS'">
-          <button class="btn btn-outline-primary">QC DONE</button>
+        <div *ngIf="element.statusCd=='QC IN PROGRESS'">
+          <button class="btn btn-outline-primary" (click)="openDialog('QC-Success',element.orderId)">QC DONE</button>
         </div>
-        <div *ngIf="element.status=='QC IN PROGRESS'">
-          <button class="btn btn-outline-primary">QC DONE</button>
+        <div *ngIf="element.statusCd=='QC SUCCESS'">
+          <button class="btn btn-outline-primary" (click)="openDialog('start-packing',element.orderId)">START PACKING</button>
         </div>
-        <div *ngIf="element.status=='QC DONE'">
-          <button class="btn btn-outline-primary">START PACKING</button>
+        <div *ngIf="element.statusCd=='PACKING IN PROGRESS'">
+          <button class="btn btn-outline-primary" (click)="openDialog('done-packing',element.orderId)">DONE  PACKING</button>
         </div>
-        <div *ngIf="element.status=='PACKING IN PROGRESS'">
-          <button class="btn btn-outline-primary">DONE PACKING</button>
+        <div *ngIf="element.statusCd=='PACKING DONE'">
+          <button class="btn btn-outline-primary" (click)="openDialog('start-shipping',element.orderId)">START SHIPPING</button>
         </div>
-        <div *ngIf="element.status=='PACKING DONE'">
-          <button class="btn btn-outline-primary">START SHIPPING</button>
+        <div *ngIf="element.statusCd=='SHIPPING IN PROGRESS'">
+          <button class="btn btn-outline-primary" (click)="openDialog('finish-shipping',element.orderId)">FINISH SHIPPING</button>
         </div>
-        <div *ngIf="element.status=='SHIPPING IN PROGRESS'">
+        <!-- <div *ngIf="element.statusCd=='SHIPPING IN PROGRESS'">
           <button class="btn btn-outline-primary">FINISH SHIPPING</button>
-        </div>
+        </div> -->
 
 
         &nbsp;
@@ -123,3 +130,10 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 </div>
+
+ <!-- <ng-container *ngIf="raji" >
+  <app-start-filling-action [datafromparent]="CurrentOrder"></app-start-filling-action>
+  </ng-container> -->
+
+
+     
