--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
@@ -1,38 +1,16 @@
-// .list-group-item{
-//     height: 130px;
-//     margin-top: 40px;
-//     font-size: 18px;
-//     margin-left: 10px;
-
-// }
-// .card{
-//     margin-top: 30px;
-//     margin-left: 50px;
-//     margin-right: 50px;
-// }
-// #itemdetails{
-//     display: inline-flex;
-// }
-// .itmlable{
-//     margin-left: 25px;
-//     font-size: 20px;
-//     margin-top: 40px;
-// }
-// #imgs{
-//     margin-top: 20px;
-//     margin-left: 20px;
-// }
-// .card-header{
-// background-color:darkgrey;
-// font-weight:50%;
-// }
+    #form{
+        width: 1400px;
+        height: 600px;
+    }
 
 
 
+    h1{
+        margin-left: 600px;
+        color:coral
+      }
 
-
-
-  span li{
+span li{
     position: relative;
     display: inline-block;
     justify-content: space-between;
@@ -144,18 +122,25 @@ position: absolute;
 margin-left: 60px;
 
 }
+#submittedbtns{
+    margin-top:30px;
+   margin-left: 450px;
+  
+  
+}
+#statusbtn{
+    color:black;
+     height: 30px;
+}
 
 
-
-
-
-
-
-
-
-
-
-
+#printbtn{
+  margin-left: 1100px;
+  width: 100px;
+  height: 30px;
+  color: cadetblue;
+  margin-top: -200px;
+}
 
 
 
