--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.html
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="startFillingform" id="form">
+<!-- <form [formGroup]="startFillingform" id="form">
     <h1>Start Filling</h1>
     <button type="button" id="printbtn">Print</button>
     <div class="card-container">
@@ -75,4 +75,48 @@
         </div>
 
     </div>
+</form> -->
+
+
+
+
+<form [formGroup]="startFillingform" id="form">
+    <h1>Fill Order</h1>
+    <input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId" [(ngModel)]="Orderdetails.orderId" hidden>
+    <div id="table">
+        
+        <table class="custom-table">
+            <thead>
+                <tr>
+                    <th>IMAGE</th>
+                    <th>PRODUCT NAME</th>
+                    <th>PRODUCTSKU ID</th>
+                    <th>LOCATION</th>
+                    <th>QUANTITY</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of orderItemDetails">
+                    <td> <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="110px" width="110px"></td>
+                    <td>{{item.productName}}</td>
+                    <td>{{item.productSku}}</td>
+                    <td>12345678</td>
+                    <td>{{item.quantity}}</td>
+
+                </tr>
+
+            </tbody>
+        </table>
+    </div>
+    <div id="submittedbtns">
+
+        <button (click)="filling($event)" [value]="startfilling"  mat-raised-button color="primary">Start</button>
+        <input type="text" placeholder="{{currentstatus}}"  formControlName="statusCd" [(ngModel)]="currentstatus" hidden>
+        <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
+        <!-- <button style="margin-left:10px" mat-raised-button color="primary" (click)="submit()" mat-dialog-close>Submit</button> -->
+       
+    </div>
+
+  
+
 </form>
