--- a/src/app/modules/admin/components/start-shipping-action/start-shipping-action.component.html
+++ b/src/app/modules/admin/components/start-shipping-action/start-shipping-action.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <form [formGroup]="startshippingform" id="form">
     <h1>Start Shipping</h1>
     <button type="button" id="printbtn">Print</button>
@@ -85,4 +85,68 @@
     </div>
 </form>
 
+ -->
 
+
+
+ <form [formGroup]="startshippingform" id="form">
+
+
+    <h1 id="headding"> Start Shipping</h1>
+    <div id="printbtns">
+        <button type="button" id="printbtn1">Print Label</button>
+        <br>
+        <button type="button" class="printbtn2" style="margin-left: 10px;">Print Invoice</button>
+    </div>
+    <div class="card" class="card1">
+
+        <div class="card-body" class="card-body1">
+            <div class="row">
+                <div>
+                   
+                    <b>OrderId:</b>
+                    <p><input type="text" formControlName="orderId" placeholder="{{Orderdetails.orderId}}" [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}"></p> 
+                    <b>Name
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.firstName}}</p>
+                    <b>Mobile Number &nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.mobileNumber}}</p>
+
+                </div>
+                <div>
+                    <h1 id="addrress">Address &nbsp;&nbsp;:</h1>
+                    <b>Flat NO
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.flatNO}}</p>
+                    <b>Area
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.area}}</p>
+                    <b>City
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.city}}</p>
+                    <b>LandMark&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.landmark}}</p>
+                    <b>Mobile Number&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.mobileNo}}</p>
+                    <b>State
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.state}}</p>
+                    <b>PinCode&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.pincode}}</p>
+
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
+    <div id="submittedbtns">
+
+
+        <button (click)="packingDone($event)"  [value]="StartShipping"  (click)="submit()" mat-raised-button color="primary" 
+            style="margin-left:10px;width: 90px;">Start</button>
+        <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd" [(ngModel)]="currentstatus" hidden>
+        <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
+    </div>
+</form>
