--- a/src/app/modules/admin/components/done-packing-action/done-packing-action.component.html
+++ b/src/app/modules/admin/components/done-packing-action/done-packing-action.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="packingdoneform" id="form">
-    <h1>Packing Done Action</h1>
+<!-- <form [formGroup]="packingdoneform" id="form">
+    <h1>Packing Confirmation</h1>
     <button type="button" id="printbtn">Print</button>
     <div class="card-container">
         <div>
@@ -9,8 +9,9 @@
                     <span>
 
                         <b>Order Id</b>
-                            <br><input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId" [(ngModel)]="Orderdetails.orderId">
-                    
+                        <br><input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId"
+                            [(ngModel)]="Orderdetails.orderId">
+
                         <li><b>status</b>
                             <br>{{Orderdetails.statusCd}}
                         </li>
@@ -37,7 +38,7 @@
                 <div class="card-body" class="image-item">
                     <div *ngFor="let item of orderItemDetails">
                         <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="130px" width="130px">
-                        
+
                         <div class="description">
 
 
@@ -50,38 +51,104 @@
                         <div class="form-check" style="margin-bottom: 20px;">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             <label class="form-check-label" for="flexCheckDefault ">
-                            Done Packing
+                                Done Packing
                             </label>
-                          </div>
+                        </div>
                     </div>
-                    
+
                 </div>
 
-            <div class="row">
-                <div class="col-2">
-                    <label class="lables">Date and time:</label>
-                    <input type="datetime-local" formControlName="lastUpdateDtTm"
-                        [(ngModel)]="packingdoneform.lastUpdateDtTm" class="form-control">
+                <div class="row">
+                    <div class="col-2">
+                        <label class="lables">Date and time:</label>
+                        <input type="datetime-local" formControlName="lastUpdateDtTm"
+                            [(ngModel)]="packingdoneform.lastUpdateDtTm" class="form-control">
+                    </div>
+                    <div class="col-4">
+                        <label>Click on Status button:</label>
+                        <br>
+                        <button (click)="packingDone($event)" [value]="packingdone" style="width: 200px;margin-top:5px;"
+                            id="statusbtn" class="btn btn-success">Packing Done</button>
+                        <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd"
+                            [(ngModel)]="currentstatus" hidden>
+                    </div>
                 </div>
-                <div class="col-4">
-                     <label>Click on Status button:</label>
-                     <br>
-                    <button (click)="packingDone($event)" [value]="packingdone"  style="width: 200px;margin-top:5px;" id="statusbtn" class="btn btn-success">Packing Done</button>
-                    <input type="text" placeholder="{{currentstatus}}"  formControlName="statusCd" [(ngModel)]="currentstatus" hidden>
-                </div>
-            </div>
 
 
 
 
                 <div id="submittedbtns">
-                <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
-                <button style="margin-left:10px" mat-raised-button color="primary" (click)="submit()" mat-dialog-close>Submit</button>
-            </div>
+                    <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
+                    <button style="margin-left:10px" mat-raised-button color="primary" (click)="submit()"
+                        mat-dialog-close>Submit</button>
+                </div>
             </div>
         </div>
 
     </div>
+</form> -->
+
+
+
+<form [formGroup]="packingdoneform" id="form">
+
+
+    <h1 id="headding"> Packing Confirmation</h1>
+    <div id="printbtns">
+        <button type="button" id="printbtn1">Print Label</button>
+        <br>
+        <button type="button" class="printbtn2" style="margin-left: 10px;">Print Invoice</button>
+    </div>
+    <div class="card" class="card1">
+
+        <div class="card-body" class="card-body1">
+            <div class="row">
+                <div>
+                   
+                    <b>OrderId:</b>
+                    <p><input type="text" formControlName="orderId" placeholder="{{Orderdetails.orderId}}" [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}"></p> 
+                    <b>Name
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.firstName}}</p>
+                    <b>Mobile Number &nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.mobileNumber}}</p>
+
+                </div>
+                <div>
+                    <h1 id="addrress">Address &nbsp;&nbsp;:</h1>
+                    <b>Flat NO
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.flatNO}}</p>
+                    <b>Area
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.area}}</p>
+                    <b>City
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.city}}</p>
+                    <b>LandMark&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.landmark}}</p>
+                    <b>Mobile Number&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.mobileNo}}</p>
+                    <b>State
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.state}}</p>
+                    <b>PinCode&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.pincode}}</p>
+
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
+    <div id="submittedbtns">
+
+
+        <button (click)="packingDone($event)"  [value]="packingdone"  (click)="submit()" mat-raised-button color="primary" 
+            style="margin-left:10px;width: 90px;">Confirm</button>
+        <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd" [(ngModel)]="currentstatus"
+            hidden>
+        <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
+    </div>
 </form>
-
-
