--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.html
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.html
@@ -1,7 +1,7 @@
-<form [formGroup]="finishfillingform" id="form">
-    <!-- <h1>data:{{datafromparent.statusCd}}</h1> -->
+<!-- <form [formGroup]="finishfillingform" id="form">
+    <h1>data:{{datafromparent.statusCd}}</h1>
 
-    <h1>Finish Filling</h1>
+    <h1> Filling Conformation</h1>
     <button type="button" id="printbtn">Print</button>
     <div class="card" class="card1">
 
@@ -58,28 +58,87 @@
 
 
                 <div id="submittedbtns">
-                    <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
-                    <button style="margin-left:10px" mat-raised-button color="primary" (click)="submit()" mat-dialog-close>Submit</button>
+
+                    <button class="btn btn-success" (click)="success($event)" [value]="fillingconformation"
+                        (click)="paymentSuccess()" style="width: 100px;">DONE</button>
+                    <input type="text" placeholder="{{fillingsuccess}}" formControlName="statusCd"
+                        [(ngModel)]="fillingsuccess" hidden>
+
+                    <button class="btn btn-primary" (click)="failed($event)" [value]="confirmationfailed"
+                        (click)="paymentFailed()" style="margin-left:20px;width:100px">FAIL</button>
+                    <input type="text" placeholder="{{fillingfailed}}" formControlName="statusCd"
+                        [(ngModel)]="fillingfailed" hidden>
+
+                    <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
                 </div>
             </div>
 
-          
+
 
 
         </div>
     </div>
 
+</form> -->
 
 
 
 
+<form [formGroup]="finishfillingform" id="form">
+    <h1>Fill Conformation</h1>
+    <input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId"
+        [(ngModel)]="Orderdetails.orderId" hidden>
+    <div id="table">
+        <table class="custom-table">
+            <thead>
+                <tr>
+                    <th>IMAGE</th>
+                    <th>PRODUCT NAME</th>
+                    <th>PRODUCTSKU ID</th>
+                    <th>LOCATION</th>
+                    <th>QUANTITY</th>
+                </tr>
+            </thead>
+            <tbody>
 
+                <tr *ngFor="let item of orderItemDetails">
 
+                    <td> <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="110px" width="110px">
+                    </td>
+                    <td>{{item.productName}}
 
+                    </td>
+                    <td>{{item.productSku}}</td>
+                    <td>12345678</td>
+                    <td>{{item.quantity}}</td>
+                   
+                    <label style="margin-top: 50px; font-size: 20px;"> 
+                        <input type="checkbox" (change)="onCheckboxChange($event)" style="width: 25px;height: 25px;">
+                        Yes
+                      </label>
+              
 
+                       
 
+                </tr>
 
+            </tbody>
+        </table>
+    </div>
 
+    <div id="submittedbtns">
+
+        <button class="btn btn-success" (click)="success($event)" [value]="fillingconformation"
+            (click)="paymentSuccess()" style="width: 100px;" [disabled]="isSubmitDisabled" >DONE</button>
+        <input type="text" placeholder="{{fillingsuccess}}" formControlName="statusCd" [(ngModel)]="fillingsuccess"hidden>
+
+        <button class="btn btn-primary" (click)="failed($event)" [value]="confirmationfailed" (click)="paymentFailed()"
+            style="margin-left:20px;width:100px">FAIL</button>
+        <input type="text" placeholder="{{fillingfailed}}" formControlName="statusCd" [(ngModel)]="fillingfailed"
+            hidden>
+
+        <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
+    </div>
 
 
 </form>
