--- a/src/app/modules/admin/components/order-item-details/order-item-details.component.html
+++ b/src/app/modules/admin/components/order-item-details/order-item-details.component.html
@@ -24,8 +24,10 @@
 
 <div id="left-arrow">
   <i class="bi bi-arrow-left-circle"></i>
-  <svg xmlns="http://www.w3.org/2000/svg" width="35" height="25" fill="currentColor" class="bi bi-arrow-left-circle" viewBox="0 0 16 16" (click)="goToOrdersList()" >
-    <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+  <svg xmlns="http://www.w3.org/2000/svg" width="35" height="25" fill="currentColor" class="bi bi-arrow-left-circle"
+    viewBox="0 0 16 16" (click)="goToOrdersList()">
+    <path fill-rule="evenodd"
+      d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
   </svg>
 </div>
 
@@ -35,7 +37,7 @@
     <div class="card">
 
       <div class="card-header">
-          <span>
+        <span>
 
           <li id="order"> <b>Order Id</b>
             <br>#{{Orderdetails.orderId}}
@@ -56,28 +58,32 @@
             <br>Null
           </li>
           <span class="icons">
-             
-            </span>
+
+          </span>
         </span>
 
       </div>
 
 
       <div class="card-body" class="image-item">
+
         <div *ngFor="let item of orderItemDetails">
-          <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="130px" width="130px">
-          <div class="description">
-         
-             
-            <p>  <b>Name:</b><br>{{item.productName}}</p>
-            <p><b>Quantity:</b>&nbsp;&nbsp;&nbsp;{{item.quantity}}</p>
-            <p><b>GST:</b>&nbsp;&nbsp;&nbsp;{{item.igstAmt}}%</p>
-              
-            <p><b>price:</b>&nbsp;&nbsp;&nbsp;{{item.totalPrice}}</p>
+          <div class="row">
+            <div>
+              <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="130px" width="130px">
+            </div>
+            <div class="description">
+
+
+              <p> <b>Name:</b><br>{{item.productName}}</p>
+              <p><b>Quantity:</b>&nbsp;&nbsp;&nbsp;{{item.quantity}}</p>
+              <p><b>GST:</b>&nbsp;&nbsp;&nbsp;{{item.igstAmt}}%</p>
+
+              <p><b>price:</b>&nbsp;&nbsp;&nbsp;{{item.totalPrice}}</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-</div>
+  </div>
