--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
@@ -1,146 +1,185 @@
     #form{
-        width: 1400px;
-        height: 600px;
+        width:auto;
+        height: auto;
+      //  border: ridge 3px;
+     
     }
 
-
-
-    h1{
-        margin-left: 600px;
-        color:coral
-      }
-
-span li{
-    position: relative;
-    display: inline-block;
-    justify-content: space-between;
-    margin-left: 50px;
-   
-   
-  }
-  li{
-    list-style-type: none;
-    justify-items: self-start;
-  }
- 
-  #Buy-Again1{
-    position: relative;
-  left: 350px;
-  margin-top: -40px;
-  background-color: orange;
-  color:black;
-  }
-  .card{
-    position: relative;
-    height: 250px;
-    width:1050px;
-    margin-left: 100px;
-    top:-30px;
-  }
-  #order{
-    position: relative;
-    left:-50px;
-  }
-
-  
-  
-  #image {
-    flex: 0 0 calc(33.33% - 20px);
-    margin: 10px;
-    
-  
-  }
-  
-  .card-container {
-   
-    width: 800px;
-    position: relative;
-    left:10px;
-   margin-top: 50px;
-  }
-  
-  .card {
-    width: 1200px;
-    border: 1px solid #ccc;
-    margin: 10px;
-    padding: 10px;
-    height:600px;
-    margin-top: 80px;
-    margin-left: 150px;
-  }
-  
-  .card-header {
-    font-weight:30px;
-    background-color:lightskyblue;
-
-  }
-  
-  .card-body {
-    margin-top: 10px;
-  
-  }
-  
- 
-  
-  .image {
-   
-    
-    // height: auto;
-    // margin-right: 50px;
-    margin-top: 20px;
-    //  flex: 0 0 calc(33.33% - 20px);
-  
-  
-  }
-  
-  .description {
-    /* Define any styles for the description */
-    font-size: 14px;
-    left:10px;
-     position: relative;
-     margin-top: 20px;
-     margin-left: 10px;
-   
-
-   
-  }
-  .icons{
-    position: relative;
-   left:160px;
-    
-  }
-  .image-item{
-     display: inline-flex;
-    //  margin-top: 20px;
-    //  margin-left: 10px;
-  }
-
-
-#left-arrow{
-   margin-top: 50px;
-position: absolute;
-margin-left: 60px;
-
+#table{
+  border: ridge 2px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
+
+//     h1{
+//         margin-left: 600px;
+//         color:coral
+//       }
+
+// span li{
+//     position: relative;
+//     display: inline-block;
+//     justify-content: space-between;
+//     margin-left: 50px;
+   
+   
+//   }
+//   li{
+//     list-style-type: none;
+//     justify-items: self-start;
+//   }
+ 
+//   #Buy-Again1{
+//     position: relative;
+//   left: 350px;
+//   margin-top: -40px;
+//   background-color: orange;
+//   color:black;
+//   }
+//   .card{
+//     position: relative;
+//     height: 250px;
+//     width:1050px;
+//     margin-left: 100px;
+//     top:-30px;
+//   }
+//   #order{
+//     position: relative;
+//     left:-50px;
+//   }
+
+  
+  
+//   #image {
+//     flex: 0 0 calc(33.33% - 20px);
+//     margin: 10px;
+    
+  
+//   }
+  
+//   .card-container {
+   
+//     width: 800px;
+//     position: relative;
+//     left:10px;
+//    margin-top: 50px;
+//   }
+  
+//   .card {
+//     width: 1200px;
+//     border: 1px solid #ccc;
+//     margin: 10px;
+//     padding: 10px;
+//     height:600px;
+//     margin-top: 80px;
+//     margin-left: 150px;
+//   }
+  
+//   .card-header {
+//     font-weight:30px;
+//     background-color:lightskyblue;
+
+//   }
+  
+//   .card-body {
+//     margin-top: 10px;
+  
+//   }
+  
+ 
+  
+//   .image {
+   
+    
+//     // height: auto;
+//     // margin-right: 50px;
+//     margin-top: 20px;
+//     //  flex: 0 0 calc(33.33% - 20px);
+  
+  
+//   }
+  
+//   .description {
+//     /* Define any styles for the description */
+//     font-size: 14px;
+//     left:10px;
+//      position: relative;
+//      margin-top: 20px;
+//      margin-left: 10px;
+   
+
+   
+//   }
+//   .icons{
+//     position: relative;
+//    left:160px;
+    
+//   }
+//   .image-item{
+//      display: inline-flex;
+//     //  margin-top: 20px;
+//     //  margin-left: 10px;
+//   }
+
+
+// #left-arrow{
+//    margin-top: 50px;
+// position: absolute;
+// margin-left: 60px;
+
+// }
 #submittedbtns{
     margin-top:30px;
-   margin-left: 450px;
+   margin-left: 500px;
   
   
 }
-#statusbtn{
-    color:black;
-     height: 30px;
+// #statusbtn{
+//     color:black;
+//      height: 30px;
+// }
+
+
+// #printbtn{
+//   margin-left: 1100px;
+//   width: 100px;
+//   height: 30px;
+//   color: cadetblue;
+//   margin-top: -200px;
+// }
+
+
+// .custom-table {
+//   border-collapse: collapse;
+// }
+
+
+.custom-table td,
+.custom-table th {
+  // border:none;
+   padding: 5px;
+   margin-left: 30px;
+  
 }
 
+.custom-table td{
+  font-size: 20px;
+font-family:initial ;
+  padding-left: 70px;
 
-#printbtn{
-  margin-left: 1100px;
-  width: 100px;
-  height: 30px;
-  color: cadetblue;
-  margin-top: -200px;
+
+
+ 
 }
+.custom-table th{
+  font-size: 20px;
+  font-family:initial ;
+  padding-left: 60px;
+  border-bottom: 1px solid black;
 
-
-
+}
+h1{
+  margin-left: 500px;
+  color: coral;
+  font-weight:bolder
+}
