Implemented Order Status history page.

--- a/src/app/modules/admin/components/add-options/add-options.component.html
+++ b/src/app/modules/admin/components/add-options/add-options.component.html
@@ -110,3 +110,21 @@
 
   <button type="submit" >Submit</button>
 </form>
+
+
+
+
+
+
+
+<!-- <mat-form-field>
+  <mat-label>Select Fruits</mat-label>
+  <mat-select [(ngModel)]="selectedFruits" multiple>
+    <mat-select-trigger>
+      {{ selectedFruits.length > 0 ? selectedFruits.length + ' fruits selected' : 'Select fruits' }}
+    </mat-select-trigger>
+    <mat-option *ngFor="let fruit of fruits" [value]="fruit">
+      {{ fruit }}
+    </mat-option>
+  </mat-select>
+</mat-form-field> -->
