--- a/src/app/modules/admin/components/order-history-page/order-history-page.component.html
+++ b/src/app/modules/admin/components/order-history-page/order-history-page.component.html
@@ -1,1 +1,34 @@
-<p>order-history-page works!</p>
+  
+  <button mat-raised-button color="" mat-dialog-close style="margin-left: 1000px;margin-top: -50px;">X</button>
+  
+  <h1>Order Status History</h1>
+<p> Order Id:#{{Orderhistory.orderId}}</p>
+
+<div id="table">
+
+    <table class="custom-table">
+        <thead>
+            <tr>
+
+                <th>STATUS</th>
+                <th>DATE & TIME</th>
+                <th>STAFF CODE</th>
+                <th>STAFF NAME</th>
+                <!-- <th>QUANTITY</th> -->
+            </tr>
+        </thead>
+        <tbody>
+          
+            <tr *ngFor="let item of Orderstatuces">
+
+               
+                <td>{{item.statusCd}}</td>
+                <td>{{item.lastUpdateDtTm}}</td>
+                <td>{{item.staffCd}}</td>
+                <td>{{item.staffName}}</td>
+
+            </tr>
+
+        </tbody>
+    </table>
+</div>
