--- a/src/app/modules/admin/components/order-item-details/order-item-details.component.scss
+++ b/src/app/modules/admin/components/order-item-details/order-item-details.component.scss
@@ -146,7 +146,13 @@ margin-left: 60px;
 }
 
 
-
+h1{
+  color: hotpink;
+  font-family: initial;
+  margin-left: 600px;
+  margin-top: 40px;
+  font-weight: bold;
+}
 
 
 
